--- a/logs-data/lang/app-dic-fr.json
+++ b/logs-data/lang/app-dic-fr.json
@@ -166,7 +166,8 @@
     "source": "source",
     "test": "test",
     "port": "port",
-    "password": "mot de passe"
+    "password": "mot de passe",
+    "submit": "envoyer"
   },
   "obs": {
     "scene-list": "OBS | Liste des scènes",
