--- a/logs-data/lang/app-dic-fr.json
+++ b/logs-data/lang/app-dic-fr.json
@@ -1,6 +1,6 @@
 {
   "sentences": {
-    "welcome-message": "Bienvenue chez toi",
+    "welcome-message": "Bienvenue",
     "waiting-for-connexion": "En attente de connexion",
     "ask-for-client-reload": "Appliquer les modifications ?",
     "open-in-window": "Ouvrir dans une fenêtre",
