userpref and toolbar

--- a/logs-data/lang/app-dic-en.json
+++ b/logs-data/lang/app-dic-en.json
@@ -42,6 +42,7 @@
       "first-start-title": "This is your first start ! Happy :)",
       "loading-fonts-list": "Loading fonts list",
       "double-click-to-edit": "Click me twice",
+      "click-to-link": "is here",
       "edit-mode": "Edit mode",
       "add-panel": "Add panel",
       "command-name-must-be-unique": "Command name must be unique.",
