--- a/logs-data/lang/app-dic-fr.json
+++ b/logs-data/lang/app-dic-fr.json
@@ -42,6 +42,7 @@
     "first-start-title": "Connexion à OBS !",
     "loading-fonts-list": "Chargement des polices",
     "double-click-to-edit": "Clique-moi 2x",
+    "click-to-link": "ici",
     "edit-mode": "Mode édition",
     "add-panel": "Ajouter un panneau",
     "command-name-must-be-unique": "Le nom de la commande doit être unique.",
