--- a/logs-data/lang/app-dic-en.json
+++ b/logs-data/lang/app-dic-en.json
@@ -70,7 +70,8 @@
       "type-shortcut-here": "Type shortcut here...",
       "add-event": "Add event",
       "confirm-quit": "Do you really want to leave ?",
-      "obs-settings": "OBS settings"
+      "obs-settings": "OBS settings",
+      "chart-vac": "Chart vac"
     },
     "words": {
       "settings": "settings",
