--- a/logs-data/lang/app-dic-fr.json
+++ b/logs-data/lang/app-dic-fr.json
@@ -70,7 +70,8 @@
     "type-shortcut-here": "Tapez le raccourci ici...",
     "add-event": "Ajouter un évènement",
     "confirm-quit": "Voulez vous vraiment quitter ?",
-    "obs-settings": "OBS configuration"
+    "obs-settings": "OBS configuration",
+    "chart-vac": "Carte vac"
   },
   "words": {
     "settings": "options",
