--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 
 Todo:
-  ☐ faire le systeme de fichier 
-  ☐ activer axios 
-  ☐ faire la recheche sur le module des preferencies 
+  ✔ faire le systeme de fichier @done(21-06-20 19:03)
+  ✔ revoir le code des airac @done(21-06-20 19:02)
+
+  
