--- a/TODO
+++ b/TODO
@@ -1,6 +1,22 @@
 
-Todo:
-  ✔ faire le systeme de fichier @done(21-06-20 19:03)
-  ✔ revoir le code des airac @done(21-06-20 19:02)
+friend:
+  ✔ Creation de la base de donner @done(21-07-05 16:02)
+  ✔ recherche des personnes @done(21-07-05 16:02)
+  ✔ creation du count users @done(21-07-06 08:41)
+  
+
+
+home:
+  ☐ refonte du code
+  ☐ faire interface de demarrage
+
+Atc: 
+  ☐ creation d'une page dédier
+
+Pilote: 
+  ☐ creation d'une page dedier
+
+
+
 
   
