module online && friend

--- a/TODO
+++ b/TODO
@@ -1,6 +1,21 @@
 
-Todo:
-  ✔ faire le systeme de fichier @done(21-06-20 19:03)
-  ✔ revoir le code des airac @done(21-06-20 19:02)
+friend:
+  ☐ Creation de la base de donner
+  ☐ recherche des personnes
+  ☐ creation du coutn users 
+
+
+home:
+  ☐ refonte du code
+  ☐ faire interface de demarrage
+
+Atc: 
+  ☐ creation d'une page dédier
+
+Pilote: 
+  ☐ creation d'une page dedier
+
+
+
 
   
