friend + add sqlite

--- a/TODO
+++ b/TODO
@@ -1,8 +1,8 @@
 
 friend:
-  ☐ Creation de la base de donner
-  ☐ recherche des personnes
-  ☐ creation du coutn users 
+  ✔ Creation de la base de donner @done(21-07-05 16:02)
+  ✔ recherche des personnes @done(21-07-05 16:02)
+  ☐ creation du count users 
 
 
 home:
