--- a/TODO
+++ b/TODO
@@ -2,7 +2,8 @@
 friend:
   ✔ Creation de la base de donner @done(21-07-05 16:02)
   ✔ recherche des personnes @done(21-07-05 16:02)
-  ☐ creation du count users 
+  ✔ creation du count users @done(21-07-06 08:41)
+  
 
 
 home:
